# bot_sdk_line

./: .gitignore  Cargo.toml  LICENSE  README.md
channel_access_token/: Cargo.toml  README.md
insight/: Cargo.toml  README.md
insight/docs/: GetMessageEventResponse.md  GetStatisticsPerUnitResponse.md
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/client/: mod.rs
lib/src/parser/: signature.rs
lib/src/support/: actix.rs  mod.rs  ntex.rs  xitca.rs
lib/src/support/XitcaError/: mod.rs
liff/: Cargo.toml  README.md
liff/docs/: LiffScope.md  UpdateLiffAppRequest.md  UpdateLiffView.md
line_channel_access_token/: Cargo.toml
line_channel_access_token/.openapi-generator/: FILES
line_channel_access_token/docs/: ChannelAccessTokenApi.md
line_insight/: Cargo.toml
line_insight/.openapi-generator/: FILES
line_insight/docs/: GetFriendsDemographicsResponse.md  InsightApi.md
line_liff/: Cargo.toml
line_liff/.openapi-generator/: FILES
line_liff/docs/: AddLiffAppRequest.md  GetAllLiffAppsResponse.md  LiffApi.md  LiffApp.md  LiffBotPrompt.md
line_manage_audience/: Cargo.toml  README.md
line_manage_audience/.openapi-generator/: FILES
line_manage_audience/docs/: AudienceGroup.md  AudienceGroupAuthorityLevel.md  AudienceGroupCreateRoute.md  AudienceGroupJobFailedType.md  AudienceGroupPermission.md  CreateAudienceGroupRequest.md  CreateAudienceGroupResponse.md  CreateClickBasedAudienceGroupResponse.md  GetAudienceGroupAuthorityLevelResponse.md  GetAudienceGroupsResponse.md  GetSharedAudienceDataResponse.md  GetSharedAudienceGroupsResponse.md  ManageAudienceBlobApi.md
line_messaging_api/: Cargo.toml
line_messaging_api/.openapi-generator/: FILES
line_messaging_api/docs/: Action.md  AgeDemographicFilter.md  AreaDemographic.md  AreaDemographicFilter.md  AudioMessage.md  CarouselColumn.md  ClipboardImagemapAction.md  EmojiSubstitutionObject.md  ErrorResponse.md  FlexBox.md  FlexBoxBackground.md  FlexBoxCornerRadius.md  FlexBoxPadding.md  FlexCarousel.md  FlexContainer.md  FlexIconSize.md  FlexImage.md  FlexImageSize.md  FlexSpanSize.md  FlexText.md  FlexTextFontSize.md  FlexVideo.md  GenderDemographic.md  GenderDemographicFilter.md  GetJoinedMembershipUsersResponse.md  GetMembershipSubscriptionResponse.md  ImageCarouselColumn.md  ImageCarouselTemplate.md  ImagemapVideo.md  LocationMessage.md  MembershipListResponse.md  MentionTarget.md  MessageQuotaResponse.md  MessagingApiBlobApi.md  MulticastRequest.md  OperatorRecipient.md  PnpMessagesRequest.md  Recipient.md  ReplyMessageRequest.md  StickerMessage.md  (+7 more)
line_module/: Cargo.toml  README.md
line_module/.openapi-generator/: FILES
line_module/docs/: GetModulesResponse.md  LineModuleApi.md
line_module_attach/: Cargo.toml
line_module_attach/.openapi-generator/: FILES
line_module_attach/docs/: LineModuleAttachApi.md
line_shop/: Cargo.toml  README.md
line_shop/.openapi-generator/: FILES
line_webhook/: Cargo.toml
line_webhook/.openapi-generator/: FILES
manage_audience/: Cargo.toml
manage_audience/docs/: Adaccount.md  AddAudienceToAudienceGroupRequest.md  AudienceGroupFailedType.md  AudienceGroupJob.md  AudienceGroupJobStatus.md  AudienceGroupJobType.md  AudienceGroupStatus.md  AudienceGroupType.md  CreateImpBasedAudienceGroupResponse.md  DetailedOwner.md  ErrorResponse.md  GetAudienceDataResponse.md  ManageAudienceApi.md  (+1 more)
messaging_api/: Cargo.toml  README.md
messaging_api/docs/: AgeDemographic.md  AllMentionTarget.md  AppTypeDemographic.md  AppTypeDemographicFilter.md  BroadcastRequest.md  ButtonsTemplate.md  CarouselTemplate.md  ConfirmTemplate.md  DemographicFilter.md  Filter.md  FlexBoxBorderWidth.md  FlexBoxSpacing.md  FlexBubble.md  FlexBubbleStyles.md  FlexButton.md  FlexComponent.md  FlexMargin.md  FlexMessage.md  FlexOffset.md  ImageMessage.md  ImagemapAction.md  ImagemapMessage.md  MarkMessagesAsReadRequest.md  MentionSubstitutionObject.md  MessageImagemapAction.md  MessagingApiApi.md  NarrowcastProgressResponse.md  NarrowcastRequest.md  OperatorDemographicFilter.md  PushMessageRequest.md  PushMessageResponse.md  QuickReply.md  QuickReplyItem.md  QuotaType.md  ReplyMessageResponse.md  RichMenuAliasListResponse.md  RichMenuArea.md  RichMenuBatchOperation.md  RichMenuBatchProgressPhase.md  RichMenuBatchProgressResponse.md  (+15 more)
messaging_api/src/apis/: configuration.rs  messaging_api_blob_api.rs  mod.rs  request.rs
messaging_api/src/models/: action.rs  age_demographic.rs  broadcast_request.rs  camera_action.rs  carousel_column.rs  carousel_template.rs  clipboard_action.rs  datetime_picker_action.rs  emoji_substitution_object.rs  filter.rs  flex_block_style.rs  flex_box_border_width.rs  flex_box_spacing.rs  flex_bubble_styles.rs  flex_button.rs  flex_carousel.rs  flex_container.rs  flex_filler.rs  flex_icon.rs  flex_image_size.rs  flex_message.rs  flex_offset.rs  flex_separator.rs  flex_span.rs  flex_span_size.rs  flex_text_font_size.rs  gender_demographic_filter.rs  get_aggregation_unit_usage_response.rs  get_joined_membership_users_response.rs  get_membership_subscription_response.rs  get_message_content_transcoding_response.rs  get_webhook_endpoint_response.rs  image_carousel_template.rs  imagemap_action.rs  imagemap_base_size.rs  imagemap_external_link.rs  imagemap_video.rs  issue_link_token_response.rs  location_action.rs  location_message.rs  (+33 more)
module/: Cargo.toml
module_attach/: Cargo.toml  README.md
shop/: Cargo.toml
webhook/: Cargo.toml  README.md
(+251 files in other folders)
