[package]
name = "line_bot_sdk_rust"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Kayxue/LineBotSdkRust"
description = "Line bot sdk for rust."
homepage = "https://github.com/Kayxue/LineBotSdkRust"
readme = "../README.md"

[features]
default = []
rocket_support = ["rocket"]
actix_support = ["actix-web"]
ntex_support = ["ntex"]
xitca_support = ["xitca-web"]

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
hyper = "1.6.0"
hyper-tls = "0.6.0"
hyper-util = "0.1.10"
sha2 = "0.10.8"

[dependencies.rocket]
version = "0.5"
optional = true
default-features = false

[dependencies.actix-web]
version = "4"
optional = true
default-features = false

[dependencies.ntex]
version = "2"
optional = true
default-features = false

[dependencies.xitca-web]
version = "*"
optional = true
default-features = false

[dependencies.line-channel-access-token]
version = "0.0.1"
path = "../line_channel_access_token"

[dependencies.line-insight]
version = "0.0.1"
path = "../line_insight"

[dependencies.line-liff]
version = "1.0.0"
path = "../line_liff"

[dependencies.line-manage-audience]
version = "0.0.1"
path = "../line_manage_audience"

[dependencies.line-messaging-api]
version = "0.0.1"
path = "../line_messaging_api"

[dependencies.line-module]
version = "0.0.1"
path = "../line_module"

[dependencies.line-module-attach]
version = "0.0.1"
path = "../line_module_attach"

[dependencies.line-shop]
version = "0.0.1"
path = "../line_shop"

[dependencies.line-webhook]
version = "1.0.0"
path = "../line_webhook"
