[package]
name = "bot_sdk_line"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Kayxue/LineBotSdkRust"
description = "Line bot sdk for rust."
homepage = "https://github.com/Kayxue/LineBotSdkRust"
readme = "../README.md"

[features]
default = []
rocket_support = ["rocket"]
actix_support = ["actix-web"]
ntex_support = ["ntex"]
xitca_support = ["xitca-web"]

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
hyper = "1.6.0"
hyper-tls = "0.6.0"
hyper-util = "0.1.10"
http-body-util = "0.1.2"
sha2 = "0.10.8"

[dependencies.rocket]
version = "0.5"
optional = true
default-features = false

[dependencies.actix-web]
version = "4"
optional = true
default-features = false

[dependencies.ntex]
version = "2"
optional = true
default-features = false

[dependencies.xitca-web]
version = "0.7.0"
optional = true
default-features = false

[dependencies.channel-access-token-line]
version = "0.0.1"
path = "../channel_access_token"

[dependencies.insight-line]
version = "0.0.1"
path = "../insight"

[dependencies.liff-line]
version = "1.0.0"
path = "../liff"

[dependencies.manage-audience-line]
version = "0.0.1"
path = "../manage_audience"

[dependencies.messaging-api-line]
version = "0.0.1"
path = "../messaging_api"

[dependencies.module-line]
version = "0.0.1"
path = "../module"

[dependencies.module-attach-line]
version = "0.0.1"
path = "../module_attach"

[dependencies.shop-line]
version = "0.0.1"
path = "../shop"

[dependencies.webhook-line]
version = "1.0.0"
path = "../webhook"
