[package]
name = "messaging-api-line"
version = "0.0.1"
authors = ["OpenAPI Generator team and contributors"]
description = "This document describes LINE Messaging API."
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
hyper = { version = "^1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
] }
http-body-util = { version = "0.1.2" }
http = "~0.2"
base64 = "~0.7.0"
futures = "^0.3"
hyper-tls = "0.6.0"
